# TapService

./: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml  validate-mqtt-schemas.yml
config/: mosquitto.conf  mosquitto_passwd
scripts/: generate_mqtt_models.py
scripts/dev/: generate_mqtt_models.py
scripts/init/: init_certificates.sh
scripts/setup/: generate_certificates.py  setup_ca.py  setup_mosquitto_auth.sh
tapservice/: certificate_manager.py  enums.py  logging_config.py  main.py  mqtt_client.py  mqtt_handlers.py  mqtt_protocol_models.py  provisioning.py  routes.py  schemas.py  session_manager.py  settings.py  ws_helpers.py
tests/: conftest.py  conftest_integration.py  test_http_endpoints.py  test_mqtt_integration.py  test_provisioning.py  test_schema_compliance.py  test_session_manager.py  test_websocket.py
